@startuml
title Modelado de los Edificios Protoss
note "Inventario y Casillero se explican en sus respectivos UMLs" as N1


class EdificioProtoss{
 + <u>EdificioProtoss(Casillero casillero, Inventario inventario, int vidaInicial, int escudoInicial)
 + void:pasarTurno()
}


class Acceso {
-{static} int: CostoGaseoso
-{static} int: CostoMineral
-{static} int: NivelDeConstruccion

 + <u>Acceso(unCasillero, unInventario)
 + void: ubicarEnInventario()
 + void: pasarTurno()
 + int: turnosParaConstruir()
 + {static} EdificioEnConstruccion:construir(casillero, inventario)
}

class Asimilador {
-{static} int: CostoGaseoso
-{static} int: CostoMineral
-{static} int: NivelDeConstruccion

 + <u>Asimilador(unCasillero, unInventario)
 + void: ubicarEnInventario()
 + void: pasarTurno()
 + int: turnosParaConstruir()
 + {static} EdificioEnConstruccion:construir(casillero, inventario)
 + int: extraerGas()
}

class NexoMineral {
-{static} int: CostoGaseoso
-{static} int: CostoMineral
-{static} int: NivelDeConstruccion

 + <u>NexoMineral(unCasillero, unInventario)
 + void: ubicarEnInventario()
 + void: pasarTurno()
 + int: turnosParaConstruir()
 + {static} EdificioEnConstruccion:construir(casillero, inventario)
 + int: extraerMineral()
}

class Pilon {
-{static} int: CostoGaseoso
-{static} int: CostoMineral
-{static} int: NivelDeConstruccion
-{static} int: Suministra

 + <u>Pilon(unCasillero, unInventario)
 + void: ubicarEnInventario()
 + void: pasarTurno()
 + int: turnosParaConstruir()
 + void: recibirDanio(Danio danio)
 + {static} EdificioEnConstruccion:construir(casillero, inventario)
}

class PuertoEstelar {
-{static} int: CostoGaseoso
-{static} int: CostoMineral
-{static} int: NivelDeConstruccion


 + PuertoEstelar(unCasillero, unInventario)
 + void: ubicarEnInventario()
 + void: pasarTurno()
 + int: turnosParaConstruir()
 + {static} EdificioEnConstruccion:construir(casillero, inventario)
}

EdificioProtoss <|-- PuertoEstelar
EdificioProtoss <|-- Pilon
EdificioProtoss <|-- NexoMineral
EdificioProtoss <|-- Asimilador
EdificioProtoss <|-- Acceso


@enduml